// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`given a button with slottable children > with asChild > should render a link with icons on the left and right 1`] = `
<div>
  <a
    href="https://www.google.com"
  >
    <span>
      Left
    </span>
    Button 
    <em>
      text
    </em>
    <span>
      Right
    </span>
  </a>
</div>
`;

exports[`given a button with slottable children > without asChild > should render a button with icons on the left and right 1`] = `
<div>
  <button>
    <span>
      Left
    </span>
    Button 
    <em>
      text
    </em>
    <span>
      Right
    </span>
  </button>
</div>
`;
